--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="square" id="s8"></div>
     <div class="square" id="s9"></div>
 </div>
-<input type="button" value="Start again" id="restart" onclick="startGame()">
+<input type="button" value="Start again" id="restart">
 <script src="script.js"></script>
 </body>
 </html>
