--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
     <link href="https://fonts.googleapis.com/css?family=Lato|Lobster|Nanum+Gothic|Noto+Sans&display=swap"
           rel="stylesheet">
