Added favicon and little changes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
+    <link rel="icon" href="https://gitlab.com/uploads/-/system/project/avatar/9683298/app-icon.ico">
     <link href="https://fonts.googleapis.com/css?family=Lato|Lobster|Nanum+Gothic|Noto+Sans&display=swap"
           rel="stylesheet">
     <link rel="stylesheet" href="style.css">
